[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mev-dex-sim"
version = "0.1.0"
description = "MEV-aware DEX trade simulator for slippage and sandwich attack analysis"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Michael Roatis" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "hypothesis>=6.0.0",
  "ruff>=0.6.0",
]

[project.scripts]
mev-sim = "mev_dex_sim.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["mev_dex_sim"]
